@@ -22,6 +22,7 @@
 
 import os
 from StringIO import StringIO
+import zipfile
 
 import bzrlib.plugin
 import bzrlib.plugins
@@ -196,3 +197,31 @@ class TestPluginHelp(TestCaseInTempDir):
             # remove the plugin 'myplug'
             if getattr(bzrlib.plugins, 'myplug', None):
                 delattr(bzrlib.plugins, 'myplug')
+
+
+class TestPluginFromZip(TestCaseInTempDir):
+
+    def make_zipped_plugin(self, zip_name, filename):
+        z = zipfile.ZipFile(zip_name, 'w')
+        z.writestr(filename, PLUGIN_TEXT)
+        z.close()
+
+    def check_plugin_load(self, zip_name, plugin_name):
+        self.assertFalse(plugin_name in dir(bzrlib.plugins),
+                         'Plugin already loaded')
+        try:
+            bzrlib.plugin.load_from_zips([zip_name])
+            self.assertTrue(plugin_name in dir(bzrlib.plugins),
+                            'Plugin is not loaded')
+        finally:
+            # unregister plugin
+            if getattr(bzrlib.plugins, plugin_name, None):
+                delattr(bzrlib.plugins, plugin_name)
+
+    def test_load_module(self):
+        self.make_zipped_plugin('./test.zip', 'ziplug.py')
+        self.check_plugin_load('./test.zip', 'ziplug')
+
+    def test_load_package(self):
+        self.make_zipped_plugin('./test.zip', 'ziplug/__init__.py')
+        self.check_plugin_load('./test.zip', 'ziplug')
